# kilo-agentic-project-team

./: .gitignore  .kilocodemodes  README.md
.kilocode/: system-prompt-architect
.kilocode/rules/: 02_tool_usage_policy.md
.kilocode/rules-accessibility-lead/: file_routing.md
.kilocode/rules-architect/: allowed_commands.md
.kilocode/rules-backend-dev/: allowed_commands.md  file_routing.md
.kilocode/rules-code/: 01-routing.md
.kilocode/rules-data-ml/: allowed_commands.md  file_routing.md
.kilocode/rules-frontend-dev/: allowed_commands.md
.kilocode/rules-fullstack-dev/: allowed_commands.md  file_routing.md
.kilocode/rules-qa-engineer/: file_routing.md
.kilocode/rules-ui-designer/: file_routing.md
.kilocode/rules-ux-researcher/: file_routing.md
.kilocode/workflows/: enable-indexing.md  onboarding-web.md  release.md  update-memory-bank.md  verify-routing.md
docs/en/: README.md  access-mcp-resource.md  apply-diff.md  ask-followup-question.md  attempt-completion.md  browser-action.md  execute-command.md  list-code-definition-names.md  list-files.md  (+9 more)
my-project/: .kilocodemodes
penpot/: .env  podman-compose.yml
projects/: planner.csv
qdrant/: Caddyfile  podman-compose.yml  prometheus.yml
scripts/kilo/: pyproject.toml
scripts/kilo/src/kilo/eval/: harness.py
scripts/kilo/src/kilo/ops/: enforce_notices.py  scan_secrets.py
scripts/kilo/src/kilo/prompt_assembler/: assembler.py  loader.py  runner.py  schema.py  validators.py
scripts/kilo/src/kilo/retrieval/: hybrid_query.py
scripts/kilo/src/kilo/tools/: cli.py  entrypoints.py  kilo.py
(+77 files in other folders)
