[project]
name = "kilocode-tools"
version = "0.3.1"
description = "Unified CLI and tools for the Kilo Code kick starter (scripts/src layout, PEP 420 namespace)"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "qdrant-client>=1.6.0"
]

[project.scripts]
kilo = "kilo.tools.kilo:main"

[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]
include = ["kilo*"]
